--- a/LoopPager/app/src/main/res/layout/activity_main.xml
+++ b/LoopPager/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="200dp"
     tools:context=".MainActivity">
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:id="@+id/loop_pager"/>
+    <LinearLayout
+        android:id="@+id/points_container"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40px"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </LinearLayout>
 </RelativeLayout>
