--- a/FMPlayer/app/src/main/res/layout/fragment_distory.xml
+++ b/FMPlayer/app/src/main/res/layout/fragment_distory.xml
@@ -7,5 +7,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:textSize="30dp"
         android:text="distory"/>
 </RelativeLayout>
