--- a/FMPlayer/app/src/main/res/layout/fragment_main.xml
+++ b/FMPlayer/app/src/main/res/layout/fragment_main.xml
@@ -5,6 +5,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="30dp"
         android:layout_centerInParent="true"
         android:text="首页"/>
 </RelativeLayout>
