--- a/New_FMRedioPlayer/app/src/main/res/layout/fragment_recommend.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/fragment_recommend.xml
@@ -2,11 +2,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="推荐界面"
-        android:textSize="30dp"
-        android:layout_centerInParent="true"/>
-
+    
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recommend_list"/>
 </RelativeLayout>
