--- a/New_FMRedioPlayer/app/src/main/res/layout/item_recommend.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/item_recommend.xml
@@ -17,14 +17,17 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/album_title_tv"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:lines="1"
             android:ellipsize="end"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="拿破仑《成功学全书》"/>
+            android:textColor="@android:color/black"
+            android:text="拿破仑.希尔《成功学全书》"/>
         <TextView
+            android:id="@+id/album_description_tv"
             android:layout_width="262dp"
             android:layout_height="15dp"
             android:lines="1"
@@ -38,19 +41,44 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
-            <TextView
-                android:layout_width="45dp"
-                android:layout_height="10dp"
-                android:text="234.3万"
-                android:textColor="#ff848484"
-                android:textSize="7sp"/>
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_width="45dp"
-                android:layout_height="10dp"
-                android:text="23集"
-                android:textColor="#ff848484"
-                android:textSize="7sp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_sound"/>
+                <TextView
+                    android:id="@+id/album_play_count"
+                    android:layout_marginLeft="2dp"
+                    android:layout_width="45dp"
+                    android:layout_height="10dp"
+                    android:text="234.3万"
+                    android:textColor="#ff848484"
+                    android:textSize="7sp"/>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginLeft="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="6dp"
+                    android:layout_height="6dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@mipmap/play_info_icon"/>
+                <TextView
+                    android:id="@+id/album_content_size"
+                    android:layout_marginLeft="2dp"
+                    android:layout_width="45dp"
+                    android:layout_height="10dp"
+                    android:text="23集"
+                    android:textColor="#ff848484"
+                    android:textSize="7sp"/>
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
