--- a/New_FMRedioPlayer/app/src/main/res/layout/fragment_recommend.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/fragment_recommend.xml
@@ -6,5 +6,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:overScrollMode="never"
+        android:background="#4f4f4f"
         android:id="@+id/recommend_list"/>
 </RelativeLayout>
