--- a/New_FMRedioPlayer/app/src/main/res/layout/fragment_error_view.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/fragment_error_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#4f4f4f"
     android:layout_width="match_parent" android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/network_error_icon"
@@ -10,7 +9,7 @@
         android:gravity="center_horizontal"
         android:layout_centerInParent="true">
         <ImageView
-            android:src="@mipmap/main_dubbing_network_error"
+            android:src="@mipmap/wifi_error"
             android:layout_width="75dp"
             android:layout_height="75dp" />
         <TextView
