--- a/New_FMRedioPlayer/app/src/main/res/layout/fragment_loading_view.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/fragment_loading_view.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="加载中"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_centerInParent="true"
+        >
+        <com.example.new_fmredioplayer.views.LoadingView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="正在玩命加载中"
+            android:layout_marginTop="14dp"
+            android:textSize="30sp"
+            />
+    </LinearLayout>
+
 </RelativeLayout>
