--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_datial.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_datial.xml
@@ -16,8 +16,8 @@
         android:layout_below="@id/iv_large_cover"
         android:layout_height="50dp">
         <TextView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="65dp"
+            android:layout_height="40dp"
             android:text="订阅"
             android:textColor="@color/white"
             android:layout_centerVertical="true"
@@ -103,12 +103,14 @@
             android:layout_height="wrap_content"
             />
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/album_detail_list"
+    <FrameLayout
+        android:id="@+id/detail_list_container"
         android:layout_width="match_parent"
+        android:layout_below="@+id/player_control_container"
         android:layout_height="match_parent"
-        android:background="#ff4f4f4f"
-        android:layout_below="@id/player_control_container"
-        />
+        android:background="@color/white">
+
+    </FrameLayout>
+
 
 </RelativeLayout>
