--- a/New_FMRedioPlayer/app/src/main/res/layout/item_detail_layout.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/item_detail_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/shape_aitem_bg"
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/order_text"
@@ -11,8 +11,9 @@
         android:text="0"
         android:layout_centerVertical="true"
         android:textSize="30sp"
-        android:padding="10dp" />
+        android:padding="20dp" />
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_centerVertical="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,11 +23,13 @@
             android:lines="1"
             android:layout_marginRight="90dp"
             android:ellipsize="end"
+            android:id="@+id/detail_item_title"
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:text="我大是标题"
-            android:textSize="22sp"/>
+            android:textSize="12sp"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,10 +41,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="17.4万"
+                android:id="@+id/detail_item_play_times"
                 android:layout_marginLeft="5dp"
                 />
             <TextView
                 android:drawableLeft="@mipmap/sound_info_icon"
+                android:id="@+id/detail_item_duration"
                 android:drawablePadding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -49,11 +54,14 @@
                 android:text="05:07"/>
     </LinearLayout>
     </LinearLayout>
+
     <TextView
+        android:id="@+id/detail_item_update_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="2018.11.22"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="12dp"
+        android:textSize="12sp"
+        android:layout_alignParentBottom="true"
+        android:text="2018.11.22" />
 </RelativeLayout>
