--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_player.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_player.xml
@@ -70,7 +70,8 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:src="@mipmap/play_icon"
-                android:layout_height="30dp" />
+                android:layout_height="30dp"
+                android:id="@+id/play_or_stop_btn"/>
             <ImageView
                 android:layout_width="0dp"
                 android:layout_weight="1"
