--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_player.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_player.xml
@@ -12,7 +12,7 @@
         android:layout_centerHorizontal="true"
         android:text="这是标题内容"/>
     <android.support.v4.view.ViewPager
-        android:background="#555555"
+        android:id="@+id/track_pager_view"
         android:layout_below="@id/track_title"
         android:layout_width="match_parent"
         android:layout_marginTop="30dp"
