--- a/SharedPreferencesActivity/app/src/main/res/layout/activity_main.xml
+++ b/SharedPreferencesActivity/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="30dp"
             android:textSize="30sp"
+            android:inputType="textPassword"
             android:hint="请输入密码"
             />
         <Button
