--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_player.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_player.xml
@@ -83,9 +83,10 @@
                 android:src="@drawable/select_player_right"
                 android:layout_height="30dp" />
             <ImageView
+                android:id="@+id/player_list_btn"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:src="@mipmap/right_second_player_icon"
+                android:src="@drawable/select_player_list"
                 android:layout_height="30dp" />
         </LinearLayout>
 
