--- a/New_FMRedioPlayer/app/src/main/res/layout/player_pop_window.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/player_pop_window.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="@drawable/shape_play_list_bg"
     android:layout_height="match_parent">
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"/>
-
-        </RelativeLayout>
+        android:id="@+id/play_list_controller_container"
+        android:orientation="horizontal"
+        android:layout_height="50dp">
 
 
-    </RelativeLayout>
 
-</LinearLayout>
+    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/play_list_rv"
+        android:layout_height="400dp"
+        android:layout_below="@id/play_list_controller_container"/>
+    <TextView
+        android:id="@+id/close_list_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_below="@id/play_list_rv"
+        android:text="关闭"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"/>
+
+</RelativeLayout>
