--- a/New_FMRedioPlayer/app/src/main/res/values/colors.xml
+++ b/New_FMRedioPlayer/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="main_color">#FA7254</color>
     <color name="white">#ffffff</color>
     <color name="sub_text_title">#979797</color>
+    <color name="sub_text_sub_line">#66979797</color>
+    <color name="play_list_text_color">#7d828c</color>
 </resources>
