整合开源框架TwinklingRefreshLayout

--- a/New_FMRedioPlayer/app/src/main/res/layout/item_detail_list.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/item_detail_list.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:id="@+id/refresh_layout"
+        android:layout_height="match_parent"
+        >
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/album_detail_list"
         android:layout_width="match_parent"
@@ -9,4 +16,6 @@
         android:overScrollMode="never"
         android:layout_below="@id/player_control_container"
         />
+
+    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
 </FrameLayout>
