主菜单控制播放状态

--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_datial.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_datial.xml
@@ -44,6 +44,10 @@
             android:id="@+id/play_control_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:layout_marginRight="140dp"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
             android:layout_centerVertical="true"
             android:text="继续播放"
             android:textSize="14sp"
