--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_main.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -33,9 +33,56 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/content_pager"
         android:overScrollMode="never"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
+        android:layout_marginBottom="50dp"
         android:layout_height="match_parent"/>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_vertical"
+        android:background="@color/main_color">
+        <com.example.new_fmredioplayer.views.RoundRectImageView
+            android:layout_width="40dp"
+            android:src="@mipmap/logo"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/main_track_cover"
+            android:layout_height="40dp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:text="我是大标题"
+                android:id="@+id/main_head_title"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:textSize="18sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="我是作者"
+                android:id="@+id/main_sub_title"
+                android:textColor="@color/play_list_text_color"
+                android:textSize="14sp"/>
 
-</LinearLayout>
+        </LinearLayout>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/main_play_control"
+            android:src="@drawable/select_play_black_bg"
+            android:layout_marginRight="5dp"/>
+    </LinearLayout>
+</RelativeLayout>
