--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_main.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:layout_height="match_parent" />
         <RelativeLayout
             android:layout_width="0dp"
+            android:id="@+id/search_btn"
             android:layout_height="match_parent"
             android:layout_weight="1">
             <ImageView
