--- a/New_FMRedioPlayer/app/src/main/res/layout/fragment_recommend.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/fragment_recommend.xml
@@ -2,11 +2,16 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
-    <android.support.v7.widget.RecyclerView
+    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never"
-        android:background="#4f4f4f"
-        android:id="@+id/recommend_list"/>
+        android:id="@+id/over_scroll_view"
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            android:background="#4f4f4f"
+            android:id="@+id/recommend_list"/>
+    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
 </RelativeLayout>
