--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_search.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_search.xml
@@ -14,6 +14,7 @@
             android:layout_width="30dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
+            android:id="@+id/search_back"
             android:paddingRight="5dp"
             android:paddingLeft="5dp"
             android:src="@drawable/select_search_left_bg"
@@ -21,6 +22,7 @@
 
         <EditText
             android:hint="请输入专辑关键字"
+            android:id="@+id/search_input"
             android:textCursorDrawable="@drawable/shape_edit_text_cursor"
             android:background="@drawable/shape_edit_text_bg"
             android:paddingRight="5dp"
@@ -33,6 +35,7 @@
             android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
             android:textSize="15sp"
+            android:id="@+id/search_btn"
             android:padding="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
