热词布局显示

--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_search.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_search.xml
@@ -45,8 +45,12 @@
     <FrameLayout
         android:id="@+id/search_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
 
-    </FrameLayout>
+        <com.example.new_fmredioplayer.views.FlowTextLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:id="@+id/flow_text_layout"/>
 
 </LinearLayout>
