搜索功能实现

--- a/New_FMRedioPlayer/app/src/main/res/layout/activity_search.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/activity_search.xml
@@ -47,10 +47,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-        <com.example.new_fmredioplayer.views.FlowTextLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:id="@+id/flow_text_layout"/>
+        <!--<com.example.new_fmredioplayer.views.FlowTextLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_margin="10dp"-->
+            <!--android:id="@+id/flow_text_layout"/>-->
 
 </LinearLayout>
