--- a/New_FMRedioPlayer/app/src/main/res/layout/item_text.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/item_text.xml
@@ -9,7 +9,7 @@
     android:paddingRight="20dp"
     android:paddingBottom="4dp"
     android:textColor="@drawable/flow_text_color"
-    android:textSize="20sp">
+    android:textSize="15dp">
 
 
 </TextView>
