--- a/New_FMRedioPlayer/app/src/main/res/layout/item_search_recommend_list.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/item_search_recommend_list.xml
@@ -2,14 +2,24 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@drawable/selector_search_recommend_bg"
     android:layout_height="30dp">
 
+    <ImageView
+        android:id="@+id/search_recommend_icon"
+        android:layout_width="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_height="20dp"
+        android:layout_centerVertical="true"
+        android:src="@mipmap/search_icon"/>
     <TextView
+        android:layout_toRightOf="@id/search_recommend_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="我是内容 ..."
         android:id="@+id/search_recommend_item"
         android:textSize="20sp"
+        android:layout_marginLeft="10dp"
         android:textColor="@color/sub_text_title"/>
     <view
         android:layout_width="match_parent"
