订阅界面显示

--- a/New_FMRedioPlayer/app/src/main/res/layout/fragment_subscription.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/fragment_subscription.xml
@@ -2,11 +2,21 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="订阅界面"
-        android:textSize="30dp"
-        android:layout_centerInParent="true"/>
+
+    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+        android:id="@+id/over_scroll_view"
+        android:layout_width="match_parent"
+        android:background="#fff4f4f4"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/sub_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            />
+
+    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
 
 </RelativeLayout>
