订阅界面跳转和复写UILoader的相关方法

--- a/New_FMRedioPlayer/app/src/main/res/layout/fragment_empty_view.xml
+++ b/New_FMRedioPlayer/app/src/main/res/layout/fragment_empty_view.xml
@@ -14,6 +14,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/empty_tips_tv"
             android:text="没有内容..."
             android:layout_marginTop="9dp"
             />
