--- a/RcycleView/app/src/main/res/layout/item_grid_view.xml
+++ b/RcycleView/app/src/main/res/layout/item_grid_view.xml
@@ -16,15 +16,15 @@
             android:layout_height="170dp">
 
             <ImageView
-                android:id="@+id/grid_view_icon"
-                android:layout_width="120dp"
+                android:id="@+id/view_icon"
+                android:layout_width="150dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/pic_01" />
 
             <TextView
-                android:id="@+id/gird_view_title"
+                android:id="@+id/view_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
