--- a/RcycleView/app/src/main/res/layout/item_list_view.xml
+++ b/RcycleView/app/src/main/res/layout/item_list_view.xml
@@ -16,19 +16,19 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/list_view_icon"
+                android:id="@+id/view_icon"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/pic_01" />
 
             <TextView
-                android:id="@+id/list_view_title"
+                android:id="@+id/view_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
-                android:layout_toRightOf="@id/list_view_icon"
+                android:layout_toRightOf="@id/view_title"
                 android:singleLine="true"
                 android:text="我是标题"
                 android:textSize="24sp" />
