--- a/RcycleView/app/src/main/res/layout/item_list_view.xml
+++ b/RcycleView/app/src/main/res/layout/item_list_view.xml
@@ -27,8 +27,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="15dp"
-                android:layout_toRightOf="@id/view_title"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/view_icon"
                 android:singleLine="true"
                 android:text="我是标题"
                 android:textSize="24sp" />
