--- a/RcycleView/app/src/main/res/layout/item_stagger_view.xml
+++ b/RcycleView/app/src/main/res/layout/item_stagger_view.xml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/view_icon"
-        android:layout_width="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_height="200dp"
-        android:src="@mipmap/pic_01" />
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        app:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/view_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/view_icon"
-        android:layout_centerHorizontal="true"
-        android:text="标题内容"
-        android:textSize="20sp" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/view_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/pic_01" />
+
+        <TextView
+            android:id="@+id/view_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_icon"
+            android:layout_centerHorizontal="true"
+            android:text="标题内容"
+            android:textSize="20sp" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
