--- a/RcycleView/app/src/main/res/layout/activity_main.xml
+++ b/RcycleView/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycle_view"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#e4e4e4" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#e4e4e4" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
