--- a/TaobaoUnion/app/src/main/res/layout/fragment_home.xml
+++ b/TaobaoUnion/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:text="精选"
-        android:layout_height="wrap_content"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:background="@color/colorPrimaryDark"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="40dp">
+
+        <TextView
+            android:layout_marginTop="5dp"
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:text="SOB"
+            android:textSize="18sp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:hint="@string/search_tips_text"
+            android:focusable="false"
+            android:background="@drawable/shape_edit_box_bg"
+            android:layout_toLeftOf="@id/scan_icon"
+            android:layout_toRightOf="@id/logo"/>
+
+        <ImageView
+            android:layout_marginTop="5dp"
+            android:id="@+id/scan_icon"
+            android:layout_width="wrap_content"
+            android:src="@mipmap/scan_white"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true"
+            android:layout_height="wrap_content"/>
+
+    </RelativeLayout>
+
+    <com.google.android.material.tabs.TabLayout
+        android:layout_width="match_parent"
+        android:id="@+id/home_indicator"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@color/colorTabSelect"
+        app:tabRippleColor="@color/colorTabNormal"
+        app:tabIndicatorColor="@color/colorTabSelect"
+        app:tabTextColor="@color/colorTabNormal"
+        app:tabBackground="@color/colorPrimaryDark"
+        android:layout_height="30dp"/>
+
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="match_parent"
+        android:id="@+id/home_pager"
+        android:overScrollMode="never"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
