--- a/TaobaoUnion/app/src/main/res/layout/fragment_error.xml
+++ b/TaobaoUnion/app/src/main/res/layout/fragment_error.xml
@@ -5,10 +5,26 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:text="加载内容错误"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_height="wrap_content"/>
+        android:orientation="vertical"
+        android:gravity="center"
+        android:id="@+id/network_error_text"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:src="@mipmap/wifi"
+            android:layout_marginBottom="15dp"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="@string/network_error_tip_text"
+            android:textSize="12sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
